/*
 * Copyright 2023 tison <wander4096@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package morax.controller;

option java_package = "org.tisonkun.morax.proto.controller";
option java_multiple_files = true;
option java_outer_classname = 'ControllerProtos';
option java_generate_equals_and_hash = true;

service Controller {
  rpc registerService(RegisterServiceRequest) returns (RegisterServiceReply) {}
  rpc listServices(ListServicesRequest) returns (ListServicesReply) {}
}

message RegisterServiceRequest {
    ServiceInfoProto serviceInfo = 1;
}

message RegisterServiceReply {}

message ListServicesRequest {
  repeated ServiceType serviceType = 1;
}

message ListServicesReply {
  repeated ServiceInfoProto serviceInfo = 1;
}

enum ServiceType {
  Bookie = 0;
}

message ServiceInfoProto {
  ServiceType type = 1;
  string target = 2;
}